--- a/css/style.css
+++ b/css/style.css
@@ -23,16 +23,16 @@ button {
   margin: 0 auto;
 }
 
-.cars {
+.products {
   padding: 80px 0;
 }
-.cars__header {
+.products__header {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   padding-bottom: 30px;
 }
-.cars__add-car {
+.products__add-product {
   padding: 5px 10px;
   font-size: 18px;
   background: green;
@@ -41,16 +41,16 @@ button {
   border: 2px solid transparent;
   transition: 0.4s;
 }
-.cars__add-car:hover {
+.products__add-product:hover {
   box-shadow: -3px 3px 10px 2px green;
   transform: translate(3px, -3px);
 }
-.cars__cards {
+.products__cards {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
-.cars__card {
+.products__card {
   width: calc(33.3% - 20px);
   box-shadow: 0 0 10px rgb(110, 107, 107);
   border-radius: 10px;
@@ -60,48 +60,48 @@ button {
   flex-direction: column;
   transition: 0.3s;
 }
-.cars__card:hover {
+.products__card:hover {
   transform: scale(1.001);
   box-shadow: 0 0 10px 5px rgb(110, 107, 107);
 }
-.cars__card__img {
+.products__card__img {
   width: 100%;
   flex-grow: 1;
 }
-.cars__card__img img {
+.products__card__img img {
   width: 100%;
   transition: 0.4s;
 }
-.cars__card__info {
+.products__card__info {
   padding: 20px 30px;
 }
-.cars__card__desc {
+.products__card__desc {
   padding: 5px 0;
 }
-.cars__card__btns {
+.products__card__btns {
   display: flex;
   gap: 10px;
   padding-top: 10px;
 }
-.cars__card__btns button {
+.products__card__btns button {
   padding: 5px 10px;
   border-radius: 3px;
   color: #fff;
   border: 2px solid transparent;
   transition: 0.4s;
 }
-.cars__card__btns .delate {
+.products__card__btns .delate {
   background: red;
 }
-.cars__card__btns .delate:hover {
+.products__card__btns .delate:hover {
   background: #fff;
   color: red;
   border-color: red;
 }
-.cars__card__btns .edit {
+.products__card__btns .edit {
   background: #000;
 }
-.cars__card__btns .edit:hover {
+.products__card__btns .edit:hover {
   background: #fff;
   color: #000;
   border-color: #000;
@@ -128,7 +128,8 @@ button {
   flex-direction: column;
   gap: 15px;
 }
-.model .form input {
+.model .form input,
+.model .form select {
   width: 100%;
   padding: 8px;
   border-radius: 3px;
