--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -1,4 +1,4 @@
-.cars {
+.products {
     padding: 80px 0;
 
     &__header {
@@ -8,7 +8,7 @@
         padding-bottom: 30px;
     }
 
-    &__add-car {
+    &__add-product {
         padding: 5px 10px;
         font-size: 18px;
         background: green;
