--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -19,7 +19,8 @@
             flex-direction: column;
             gap: 15px;
         }
-        input {
+        input,
+        select {
             width: 100%;
             padding: 8px;
             border-radius: 3px;
